--- a/src/tentang.html
+++ b/src/tentang.html
@@ -23,14 +23,24 @@
           </div>
           <div class="flex-1">
             <p class="text-lg lg:text-xl text-black">
-              Joy Cat didirikan oleh kakak beradik, dr. Bima Sakti Gemilang dan dr. Andromeda Gemilang. Datang dari keluarga pecinta kucing dan sempat memelihara hampir dari 100 ekor kucing, kami memahami bahwa kucing bukan hanya sekadar hewan peliharaan, tetapi juga anggota keluarga yang berharga.
+              Joy Cat didirikan oleh kakak beradik, dr.Bima Sakti Gemilang dan dr.Andromeda Gemilang. Datang dari keluarga pecinta kucing dan sempat memelihara hampir dari 100 ekor kucing, kami memahami bahwa kucing bukan hanya sekadar hewan peliharaan, tetapi juga anggota keluarga yang berharga.
               Oleh karena itu, kami bertekad untuk menyediakan layanan yang mendukung kesehatan dan kebahagiaan bagi kucing dan para pemiliknya.
             </p>
           </div>
         </div>
         <div class="container flex flex-col px-10 lg:px-20 mx-auto py-32">
           <h2 class="font-bold text-[40px]">The Cat Doctors</h2>
-          <div class="flex flex-col lg:flex-row"></div>
+          <div class="flex flex-col lg:flex-row mt-32 gap-8 items-center justify-center">
+            <img src="/public/img/dokter-bima-sakti.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
+            <p class="flex flex-1 text-xl text-black">
+              Dokter Bima Sakti Gemilang memperoleh gelar dokter hewan dari Michigan State University. Di Joy Cat, ia saat ini bekerja sebagai salah satu dari dua dokter hewan fulltime. Dia sangat bersemangat dalam memberikan perawatan pencegahan yang tepat kepada semua pasien, dan giat memberikan
+              edukasi terkait kesehatan kucing kepada para pemilik kucing. Dr. Bintang juga sangat mahir dan unggul dalam operasi jaringan lunak.
+            </p>
+          </div>
+          <div class="flex flex-col-reverse lg:flex-row mt-32 gap-8 items-center justify-center">
+            <p class="flex flex-1 text-xl text-black">Dokter Andromeda Gemilang, adik dari dr. Bima adalah Praktisi Tingkat Lanjut dalam Kedokteran Kucing dan memegang Keanggotaan Kolese Ilmuwan Hewan Indonesia untuk Kedokteran Kucing.</p>
+            <img src="/public/img/dokter-andromeda.jpeg" class="flex-1 w-full h-[450px] rounded-2xl object-cover object-center" alt="" />
+          </div>
         </div>
       </section>
     </main>
