--- a/src/tentang.html
+++ b/src/tentang.html
@@ -14,7 +14,7 @@
     <main>
       <section class="ttg bg-light text-dark text-[64px] py-32">
         <div class="flex flex-col lg:flex-row gap-10 justify-center container px-10 lg:px-20 mx-auto">
-          <div class="flex flex-col lg:flex-row gap-[10px] flex-1">
+          <div class="flex flex-col md:flex-row gap-[10px] flex-1">
             <h1 class="font-black">
               Tentang <br />
               Kami
