--- a/src/index.html
+++ b/src/index.html
@@ -151,19 +151,19 @@
             <img src="/public/img/service-klinik.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Klinik Kucing</h3>
             <p class="font-normal text-xl text-pretty">Tim dokter hewan kami yang berpengalaman siap memberikan perawatan medis terbaik untuk kucing Anda. Kami menyediakan layanan vaksinasi, pemeriksaan rutin, pengobatan penyakit, dan konsultasi kesehatan.</p>
-            <a href="#" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Cek Dokter</a>
+            <a href="klinik.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Cek Dokter</a>
           </div>
           <div class="flex flex-col w-11/12 lg:w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-daycare.webp" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Daycare & Grooming</h3>
             <p class="font-normal text-xl text-pretty">Butuh tempat yang aman dan nyaman untuk menitipkan kucing Anda saat Anda sibuk? Daycare kami adalah solusinya. Selain itu, layanan grooming kami akan membuat kucing Anda tetap bersih dan cantik.</p>
-            <a href="#" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Lihat Paket</a>
+            <a href="grooming.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[68px]">Lihat Paket</a>
           </div>
           <div class="flex flex-col w-11/12 lg:w-4/12 h-[700px] p-4 rounded-[18px] bg-white text-dark">
             <img src="/public/img/service-adopsi.jpeg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
             <h3 class="font-semibold text-[32px] py-4 text-pretty">Adopsi Kucing</h3>
             <p class="font-normal text-xl text-pretty">Bantu kami menemukan rumah baru yang penuh cinta untuk kucing-kucing yang membutuhkan. Lihat kucing-kucing yang siap diadopsi dan jadilah bagian dari cerita bahagia mereka.</p>
-            <a href="#" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[97px]">Cari Kucing</a>
+            <a href="adopsi.html" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[97px]">Cari Kucing</a>
           </div>
         </div>
       </div>
