--- a/src/adopsi.html
+++ b/src/adopsi.html
@@ -25,7 +25,7 @@
             <p class="text-lg lg:text-xl text-black">Berikut adalah beberapa kucing yang saat ini siap untuk diadopsi. Klik pada gambar untuk melihat informasi lebih detail tentang masing-masing kucing.</p>
           </div>
         </div>
-        <div class="flex flex-col justify-start items-stajustify-start pt-10 scale-95 pb-16">
+        <div class="flex flex-col justify-start items-stajustify-start pt-10 gap-20 scale-95 pb-16">
           <div class="flex flex-col lg:flex-row justify-center items-center gap-8 py-10">
             <div class="flex flex-col w-11/12 lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
               <img src="/public/img/adopsi-bella.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
