forgot the padding haha

--- a/src/adopsi.html
+++ b/src/adopsi.html
@@ -12,7 +12,7 @@
   <body class="font-['Barlow']">
     <section id="big-cat-pic" class="bg-[url('/public/img/hero-adoption.jpg')] bg-cover bg-center w-full h-[300px] md:h-[600px]"></section>
     <main>
-      <section class="up bg-light text-dark text-[64px] py-20">
+      <section class="up bg-light text-dark text-[64px] pt-20 pb-10">
         <div class="flex flex-col lg:flex-row gap-10 justify-center container px-10 lg:px-20 mx-auto">
           <div class="flex flex-col md:flex-row gap-[10px] flex-1 lg:items-end">
             <h1 class="font-black">
@@ -25,7 +25,7 @@
             <p class="text-lg lg:text-xl text-black">Berikut adalah beberapa kucing yang saat ini siap untuk diadopsi. Klik pada gambar untuk melihat informasi lebih detail tentang masing-masing kucing.</p>
           </div>
         </div>
-        <div class="flex flex-col justify-start items-stajustify-start pt-10 gap-20 scale-95 pb-16">
+        <div class="flex flex-col justify-start items-stajustify-start pt-10 gap-10 scale-95">
           <div class="flex flex-col lg:flex-row justify-center items-center gap-8 py-10">
             <div class="flex flex-col w-11/12 lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
               <img src="/public/img/adopsi-bella.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
