--- a/src/adopsi.html
+++ b/src/adopsi.html
@@ -135,6 +135,32 @@
           </div>
         </div>
       </section>
+      <section class="bg-white">
+        <div class="container mx-auto px-10 my-20">
+          <div class="flex flex-col lg:flex-row w-full bg-yellowLah rounded-2xl overflow-hidden text-white">
+            <div class="w-full text-3xl flex-1 flex flex-col gap-10 p-10 justify-center">
+              <p class="text-xl text-dark">
+                <span class="text-[32px]">Tidak menemukan kucing yang tepat untuk Anda?</span> <br />
+                Isi form di bawah ini, kami akan memberitahu Anda jika ada yang menitipkan kucing yang Anda inginkan.
+              </p>
+              <div class="flex flex-col font-['Barlow'] gap-1">
+                <label for="name" class="text-dark font-bold text-xl">Nama</label>
+                <input type="text" placeholder="Tuliskan nama Anda" class="text-lg p-3 rounded-md" />
+              </div>
+              <div class="flex flex-col font-['Barlow'] gap-1">
+                <label for="name" class="text-dark font-bold text-xl">Email</label>
+                <input type="text" placeholder="Alamat Email Anda" class="text-lg p-3 rounded-md" />
+              </div>
+              <div class="flex flex-col font-['Barlow'] gap-1">
+                <label for="name" class="text-dark font-bold text-xl">Preferensi kucing yang diinginkan</label>
+                <textarea name="preference" cols="10" placeholder="Contoh: Persia, Betina, umur 3 tahun ke atas, putih polos" class="text-lg p-3 h-40 rounded-md" id=""></textarea>
+              </div>
+              <a href="#" class="bg-dark hover:bg-sky-950 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex mt-10">Submit</a>
+            </div>
+            <div class="w-full flex-1"><img src="/public/img/Image(5).png" class="h-fit w-fit" alt="" /></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
