5th page DONE, also changed the hover for the socials on footer

--- a/src/index.html
+++ b/src/index.html
@@ -127,8 +127,8 @@
       <li class="hamburgerList"><a href="#">Contact</a></li>
     </ul> -->
     <section class="-my-10 lg:my-10 xl:my-32">
-      <div class="flex flex-col-reverse md:flex-row container mx-auto bg-red-500">
-        <div id="left" class="flex flex-col justify-center flex-1 gap-5 text-dark scale-75 md:scale-50 lg:scale-90 xl:scale-100 lg:my-0 lg:mb-0">
+      <div class="flex flex-col-reverse md:flex-row container mx-auto px-0 xl:px-20 2xl:px-40">
+        <div id="left" class="flex flex-col justify-center flex-1 -mt-48 md:mt-0 gap-5 text-dark scale-75 md:scale-50 lg:scale-90 xl:scale-100 lg:my-0 lg:mb-0">
           <h1 class="text-[40px] md:text-[56px] md:leading-[67px] text-pretty font-semibold">Professional, Loving and Reliable Cat Care When You Can’t be There</h1>
           <p class="text-xl font-normal text-pretty flex justify-end">
             Di Joy Cat, kami berkomitmen untuk memberikan perawatan terbaik bagi kucing kesayangan Anda. Kami menawarkan berbagai layanan yang dirancang khusus untuk memastikan kesehatan dan kebahagiaan kucing Anda. Dari klinik kucing hingga daycare dan grooming, serta program adopsi, Joy Cat adalah
@@ -269,13 +269,13 @@
             <p class="text-Fuschia font-bold">Follow us for updates</p>
             <div class="flex flex-row gap-4">
               <a href="#">
-                <img src="/public/img/Icon-YT.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                <img src="/public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
               <a href="#">
-                <img src="/public/img/Icon-TT.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                <img src="/public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
               <a href="#">
-                <img src="/public/img/Icon-IG.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                <img src="/public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
               </a>
             </div>
           </div>
