--- a/src/tentang.html
+++ b/src/tentang.html
@@ -99,13 +99,13 @@
               <p class="text-Fuschia font-bold">Follow us for updates</p>
               <div class="flex flex-row gap-4">
                 <a href="#">
-                  <img src="/public/img/Icon-YT.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                  <img src="/public/img/Icon-YT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-TT.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                  <img src="/public/img/Icon-TT.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
                 <a href="#">
-                  <img src="/public/img/Icon-IG.svg" class="hover:-translate-y-2 hover:duration-300 duration-300" alt="" />
+                  <img src="/public/img/Icon-IG.svg" class="hover:brightness-75 hover:duration-300 duration-300" alt="" />
                 </a>
               </div>
             </div>
