--- a/src/index.html
+++ b/src/index.html
@@ -168,54 +168,51 @@
         </div>
       </div>
     </section>
-    <!-- <section>
-      <div class="bg-[url('/public/img/big-cat-img.jpg')] bg-cover bg-center py-32 w-full text-dark">
-        <div class="container w-full flex flex-col md:flex-row gap-10 mx-10">
-          <div class="flex flex-col items-center py-5 bg-white lg:w-4/12 md:w-11/12 rounded-[18px]">
-            <div class="flex flex-col items-start gap-5 w-full px-10">
-              <h4 class="text-[30px] font-semibold">Opening Hours</h4>
-              <ul class="flex flex-col gap-5 text-lg">
-                <li>
-                  <span class="font-bold">Weekdays</span>
-                  <br />
-                  08:00-17:00
-                </li>
+    <section>
+      <div class="bg-[url('/public/img/big-cat-img.jpg')] bg-cover bg-center py-40">
+        <div class="flex flex-col lg:flex-row lg:container w-full gap-5 px-10 lg:ps-10 justify-start text-dark lg:pe-96">
+          <div class="flex flex-col bg-white pt-5 pb-7 w-full items-start gap-5 rounded-[18px] px-10">
+            <h4 class="text-[30px] font-semibold">Opening Hours</h4>
+            <ul class="flex flex-col gap-5 text-lg">
+              <li>
+                <span class="font-bold">Weekdays</span>
+                <br />
+                08:00-17:00
+              </li>
 
-                <li>
-                  <span class="font-bold">Weekend</span>
-                  <br />
-                  07:00-19:00
-                </li>
-              </ul>
-              <div class="bg-greenish w-full h-px"></div>
-              <h4 class="text-[30px] font-semibold">Kontak Cepat</h4>
-              <ul class="flex flex-col gap-5 text-lg">
-                <li>
-                  <span class="font-bold">Whatsapp</span>
-                  <br />
-                  0812-1234-5678
-                </li>
-              </ul>
-            </div>
+              <li>
+                <span class="font-bold">Weekend</span>
+                <br />
+                07:00-19:00
+              </li>
+            </ul>
+            <div class="bg-greenish w-full h-px"></div>
+            <h4 class="text-[30px] font-semibold">Kontak Cepat</h4>
+            <ul class="flex flex-col gap-5 text-lg">
+              <li>
+                <span class="font-bold">Whatsapp</span>
+                <br />
+                0812-1234-5678
+              </li>
+            </ul>
           </div>
-          <div class="flex flex-col items-center justify-center py-5 bg-white w-full lg:w-4/12 md:w-11/12 rounded-[18px]">
-            <div class="flex flex-col items-start gap-5 w-full px-10">
-              <h4 class="text-[30px] font-semibold">Alamat Kami</h4>
-              <p class="text-lg font-normal text-pretty">Jl. Radar Auri No.32d, Cisalak Ps., Kec. Cimanggis, Kota Depok, Jawa Barat 16452</p>
-              <div class="bg-greenish w-full h-px"></div>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15860.663436893967!2d106.8679048!3d-6.3725769!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69edee0a2b7f05%3A0x95ab16f97f8f308a!2sMoreTHAN%20Veterinary%20Clinic!5e0!3m2!1sen!2sid!4v1717110420914!5m2!1sen!2sid"
-                class="w-full h-80"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
+          <div class="flex flex-col bg-white pt-5 pb-7 w-full items-start gap-5 rounded-[18px] px-10">
+            <h4 class="text-[30px] font-semibold">Alamat Kami</h4>
+            <p class="flex flex-col gap-5 text-lg">Jl. Radar Auri No.32d, Cisalak Ps., Kec. Cimanggis, Kota Depok, Jawa Barat 16452</p>
+            <div class="bg-greenish w-full h-px"></div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15860.663436893967!2d106.8679048!3d-6.3725769!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69edee0a2b7f05%3A0x95ab16f97f8f308a!2sMoreTHAN%20Veterinary%20Clinic!5e0!3m2!1sen!2sid!4v1717418519853!5m2!1sen!2sid"
+              width="100%"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <section>
       <div class="text-dark bg-greenish flex flex-col xl:flex-row gap-10 p-10 py-20">
         <h1 class="text-[40px] md:text-[64px] font-black">Testimonials</h1>
@@ -294,3 +291,28 @@
     <script src="script.js"></script>
   </body>
 </html>
+<div class="flex flex-col items-start gap-5 w-full px-10">
+  <h4 class="text-[30px] font-semibold">Opening Hours</h4>
+  <ul class="flex flex-col gap-5 text-lg">
+    <li>
+      <span class="font-bold">Weekdays</span>
+      <br />
+      08:00-17:00
+    </li>
+
+    <li>
+      <span class="font-bold">Weekend</span>
+      <br />
+      07:00-19:00
+    </li>
+  </ul>
+  <div class="bg-greenish w-full h-px"></div>
+  <h4 class="text-[30px] font-semibold">Kontak Cepat</h4>
+  <ul class="flex flex-col gap-5 text-lg">
+    <li>
+      <span class="font-bold">Whatsapp</span>
+      <br />
+      0812-1234-5678
+    </li>
+  </ul>
+</div>
