whatsapp link on nav

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               <a href="/src/adopsi.html">Adopsi</a>
             </li>
             <li>
-              <a href=""><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
+              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
             </li>
           </ul>
         </div>
