text-center'ed the reserve button

--- a/src/grooming.html
+++ b/src/grooming.html
@@ -191,7 +191,7 @@
                   </div>
                 </div>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex mt-10"
+              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex mt-10 text-center"
                 ><i class="bi bi-whatsapp px-3 text-3xl"></i>Reservasi Sekarang</a
               >
             </div>
@@ -240,7 +240,7 @@
                   </div>
                 </div>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex mt-10"
+              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex mt-10 text-center"
                 ><i class="bi bi-whatsapp px-3 text-3xl"></i>Reservasi Sekarang</a
               >
             </div>
